Fixed bug #48512 (DOMDocument::validate() fails with both a E_NOTICE and E_WARN if no DTD)

# Will MFH to 5.3 after RC